# archi_db

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: business_rules.md  data_dictionary.md  erd.md  prompt_bdd_architecte.md
scripts/: backup.sh  init_db.sh
sql/: 01_schema.sql  02_indexes.sql  03_views.sql  04_functions.sql  05_triggers.sql  06_seed_data.sql  07_analytics_queries.sql
src/: __init__.py  cli.py  dashboard.py  db.py  export.py  models.py
tests/: test_functions.py  test_queries.py  test_schema.py
