[project]
name = "archi-db"
version = "1.0.0"
description = "Base de donnees complete pour un cabinet d'architecture"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "openpyxl>=3.1",
]

[project.scripts]
archi-cli = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
